# laa

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py  crowddatasets.py  laa.py
tests/: test_laa.py
wandb_hyps/: bluebirds.yaml  syntetic_overlap_2.yaml  syntetic_overlap_3.yaml
