[tool.poetry]
name = "laa"
version = "0.1.0"
description = ""
authors = ["martins0n <martinmail@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
pandas = "^1.3.4"
requests = "^2.26.0"
crowd-kit = "^0.0.8"
PyYAML = "^6.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
